hphp/test/zend/good/ext/dom/tests/DOMDocument_preserveWhiteSpace_basic.php
<?php

$doc = new DOMDocument;
$doc->load(dirname(__FILE__)."/book.xml");

var_dump($doc->preserveWhiteSpace);

$doc->preserveWhiteSpace = false;
var_dump($doc->preserveWhiteSpace);

?>
